--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "commander": "^10.0.0",
     "joi": "^17.9.1",
     "nanoid": "^4.0.2",
+    "uuid": "^9.0.0",
     "yargs": "^17.7.1"
   }
 }
